--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -77,7 +77,7 @@
                     android:id="@+id/input_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textVisiblePassword"
+                    android:inputType="textPassword"
                     android:textSize="12sp"
                     android:hint="Password"
                     android:layout_marginBottom="20dp"/>
