--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".register"
+    tools:context=".SignUp"
     android:background="#3D832A">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -93,7 +93,7 @@
                     android:id="@+id/input_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textVisiblePassword"
+                    android:inputType="textPassword"
                     android:textSize="12sp"
                     android:hint="Password"/>
 
@@ -111,7 +111,7 @@
                     android:id="@+id/confirm_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textVisiblePassword"
+                    android:inputType="textPassword"
                     android:textSize="12sp"
                     android:hint="Confirm Password"/>
 
@@ -122,7 +122,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/btn_sign_in"
                 android:backgroundTint="#3D832A"
-                android:text="Sign In"
+                android:text="Sign Up"
                 android:padding="20dp">
             </Button>
 
