--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -111,7 +111,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/text_regist"
-                    android:text="Sign In"
+                    android:text="Sign Up"
                     android:textStyle="bold">
                 </TextView>
 
