--- a/app/src/main/res/layout/activity_order_act.xml
+++ b/app/src/main/res/layout/activity_order_act.xml
@@ -91,7 +91,7 @@
 
             </androidx.cardview.widget.CardView>
 
-            <TextView
+            <EditText
                 android:id="@+id/countPaket"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
