--- a/app/src/main/res/layout/adapter_cart.xml
+++ b/app/src/main/res/layout/adapter_cart.xml
@@ -17,7 +17,7 @@
         android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageView"
+        app:layout_constraintEnd_toStartOf="@+id/icon_done"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.413">
@@ -40,13 +40,13 @@
     </TextView>
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/icon_done"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginTop="23dp"
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="10dp"
-        android:src="@drawable/ic_plus"
+        android:src="@drawable/ic_done"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/icon_delete"
         app:layout_constraintHorizontal_bias="0.952"
