--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,10 +25,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Good Morning, Tian"
+                android:text="Selamat Datang"
                 android:textColor="@color/black"
-                android:textSize="30dp"
-                android:textStyle="bold" />
+                android:textSize="25dp"
+                android:textStyle="bold"
+                android:fontFamily="monospace"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -72,7 +73,7 @@
                         android:drawablePadding="10dp"
                         android:gravity="center_vertical"
                         android:padding="10dp"
-                        android:text="On Process"
+                        android:text="Kabupaten Madiun"
                         android:textColor="#ffec2d2d"
                         android:textSize="12sp"
                         app:drawableStartCompat="@drawable/ic_location"
