--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -7,31 +7,48 @@
     tools:context=".Order"
     android:padding="10dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="example"
-            android:id="@+id/selected"
-            android:textSize="50dp"
-            android:textStyle="bold"
-            android:textAlignment="center"
-            android:layout_marginTop="20dp"
-            android:fontFamily="monospace">
-        </TextView>
+            android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="example"
+                    android:id="@+id/selected"
+                    android:textSize="50dp"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    android:layout_marginTop="20dp"
+                    android:fontFamily="monospace">
+                </TextView>
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="nama menu"
+                    android:id="@+id/input_menu">
+                </EditText>
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="harga"
+                    android:id="@+id/input_harga">
+                </EditText>
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="kirim"
+                    android:id="@+id/btnKirim">
+                </Button>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/listPilihanMenu"
-            android:layout_marginTop="20dp">
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/listPilihanMenu"
+                    tools:listitem="@layout/adapter_list_menu"
+                    android:layout_marginTop="20dp">
+                </androidx.recyclerview.widget.RecyclerView>
 
-        </androidx.recyclerview.widget.RecyclerView>
-
-
-    </LinearLayout>
+        </LinearLayout>
 
 </RelativeLayout>
