--- a/app/src/main/res/layout/adapter_list_menu.xml
+++ b/app/src/main/res/layout/adapter_list_menu.xml
@@ -16,12 +16,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="140dp"
-                android:id="@+id/listIcon"
-                android:scaleType="fitXY"
-                android:src="@drawable/logo"/>
+<!--            <ImageView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="140dp"-->
+<!--                android:id="@+id/listIcon"-->
+<!--                android:scaleType="fitXY"-->
+<!--                android:src="@drawable/logo"/>-->
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -42,6 +42,13 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="15dp"
                 android:fontFamily="monospace">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/jumlah"
+                android:text="0"
+                android:textAlignment="center">
             </TextView>
 <!--            <LinearLayout-->
 <!--                android:layout_width="match_parent"-->
