--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -4,9 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Order"
-    android:padding="10dp">
-
+    tools:context=".Cart"
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,21 +13,31 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="example"
-            android:id="@+id/selected"
+            android:text="Keranjang"
             android:textSize="50dp"
             android:textStyle="bold"
             android:textAlignment="center"
             android:layout_marginTop="20dp"
             android:fontFamily="monospace">
         </TextView>
+
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/listPilihanMenu"
-            android:layout_marginTop="20dp">
-
+            android:id="@+id/listViewKeranjang"
+            tools:listitem="@layout/adapter_list_cart">
         </androidx.recyclerview.widget.RecyclerView>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom">
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tombolKirim"
+            android:text="Tambah Pesanan">
+        </Button>
     </LinearLayout>
 
 </RelativeLayout>
