--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -79,6 +79,7 @@
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
                     android:textSize="12sp"
+                    android:fontFamily="monospace"
                     android:hint="Password"
                     android:layout_marginBottom="20dp"/>
 
@@ -91,31 +92,9 @@
                 android:id="@+id/btn_login"
                 android:backgroundTint="#3D832A"
                 android:text="LOGIN"
-                android:padding="20dp">
+                android:padding="20dp"
+                android:layout_marginBottom="20dp">
             </Button>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="No Have Account ?"
-                    android:layout_marginRight="10dp">
-                </TextView>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/text_regist"
-                    android:text="Sign Up"
-                    android:textStyle="bold">
-                </TextView>
-
-            </LinearLayout>
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
