--- a/app/src/main/res/layout/activity_order_act.xml
+++ b/app/src/main/res/layout/activity_order_act.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".OrderAct"
-    android:gravity="bottom">
+    android:gravity="center_vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -44,64 +44,11 @@
                 android:text="hargaMenu">
             </TextView>
         </LinearLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            app:boxBackgroundMode="outline"
-            android:layout_marginBottom="20dp">
-
-            <EditText
-                android:id="@+id/input_pelanggan"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="text"
-                android:fontFamily="monospace"
-                android:textSize="12sp"
-                android:hint="Nama Pelanggan"/>
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            app:boxBackgroundMode="outline"
-            android:layout_marginBottom="20dp">
-
-            <EditText
-                android:id="@+id/input_telepon"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="text"
-                android:fontFamily="monospace"
-                android:textSize="12sp"
-                android:hint="No telepon"/>
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            app:boxBackgroundMode="outline">
-
-            <EditText
-                android:id="@+id/input_alamat"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:inputType="text"
-                android:fontFamily="monospace"
-                android:textSize="12sp"
-                android:hint="Alamat"/>
-
-        </com.google.android.material.textfield.TextInputLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginBottom="20dp">
+            android:layout_marginTop="150dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -187,7 +134,7 @@
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/btnPesan"
-                android:text="Tambah Pesanan"
+                android:text="Tambah Keranjang"
                 app:cornerRadius="50dp"
                 app:elevation="5dp"
                 android:layout_gravity="center_horizontal">
