--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -20,6 +20,14 @@
             android:layout_marginTop="20dp"
             android:fontFamily="monospace">
         </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/HargaPesanan"
+            android:text="10.000"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="10dp">
+        </TextView>
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
@@ -32,12 +40,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="bottom">
-        <Button
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:id="@+id/tombolKirim"
-            android:text="Tambah Pesanan">
-        </Button>
+            app:cardCornerRadius="20dp"
+            android:layout_marginBottom="-20dp"
+            app:cardBackgroundColor="@color/primarycolor">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Tambah Pesanan"
+                android:textSize="30dp"
+                android:textStyle="bold"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="20dp"
+                android:textColor="@color/white">
+            </TextView>
+
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 
 </RelativeLayout>
